--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
+  "proxy": "www.superheroapi.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -21,5 +23,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ] 
 }
