--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
+	"dotenv": "^6.2.0",
+	"jwt-decode": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
