--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,17 @@
   "name": "heroapi",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "cors": "^2.8.5",
-	"dotenv": "^6.2.0",
-	"jwt-decode": "^2.2.0",
+    "dotenv": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
-  "proxy": "https://www.superheroapi.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
