--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt-nodejs": "^0.0.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "if-env": "^1.0.4",
