--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
+    "add": "^2.0.6",
     "axios": "^0.18.0",
-    "jwt-decode": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "yarn": "^1.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
