--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bcrypt-nodejs": "^0.0.3",
     "dotenv": "^6.2.0",
